<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tablet Vox Demo</string>
    <string name="title_activity_main_menu">Tablet Vox</string>
    <string name="title_activity_modo_touch">Modo Touch</string>
    <string name="title_activity_modo_varredura">Modo Varredura</string>
    <string name="title_activity_telas_cadastro">TelasCadastro</string>
    <string name="title_activity_incluir_ais">Incluir AIS</string>
    <string name="title_activity_modo_touch_categorias">Categorias - Modo Touch</string>
    <string name="title_activity_modo_varredura_categorias">Categorias - Modo Varredura</string>
    <string name="title_activity_selecionar_perfil">Selecione o Perfil</string>
    <string name="title_activity_criar_perfil">Criar Perfil</string>
    <string name="title_activity_editar_perfil">Editar Perfil</string>
    <string name="title_activity_criar_categoria">Criar Categoria</string>
    <string name="title_activity_editar_categoria">Editar Categoria</string>
    <string name="title_activity_selecionar_categorias">Selecione as categorias</string>
    <string name="title_activity_lista_categorias">Categorias</string>
    <string name="title_activity_criar_imagem">Criar Imagem</string>
    <string name="title_activity_editar_imagem">Editar Imagem</string>
    <string name="title_activity_selecionar_imagem">Selecione uma imagem</string>
    <string name="title_activity_lista_imagens">Imagens</string>
    <string name="title_activity_selecionar_imagens">Selecione as imagens</string>
    <string name="title_activity_lista_imagens_categoria">Imagens da categoria</string>
    <string name="title_activity_lista_categorias_perfil">Categorias do Perfil</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_title">Menu Principal</string>
    <string name="cmdLaunchModoTouchText">Modo Touch</string>
    <string name="cmdLaunchModoVarreduraText">Modo Varredura</string>
    <string name="cmdLaunchTelasCadastroText">Telas</string>
    <string name="cmdLaunchIncluirAISText">Incluir AIS</string>
    <string name="cmdLaunchMudarPerfilText">Mudar Perfil</string>
    <string name="cmdLaunchCriarEditarPerfilText">Criar Perfil</string>
    <string name="cmdLaunchFormCategoria">Formulario Categoria</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="action_opcoes">Opções</string>
    <string name="action_selecionar_perfil">Mudar Perfil</string>
    <string name="action_gerenciar_imagens">Gerenciar Imagens</string>
    <string name="action_gerenciar_categorias">Gerenciar Categorias</string>
    <string name="telas_pagina_title">Escolha a Página</string>
    <string name="pagina_telas_cadastro">Página</string>
    <string name="entrada_telas_cadastro">ID da imagem</string>
    <string name="cmdSalvarTelasCadastro">Salvar</string>
    <string name="cmdDeletarTelasCadastro">Excluir</string>
    <string name="texto_carregando">Carregando dados iniciais, aguarde um momento &#8230;</string>
    <string name="itemPerfilDe">De:</string>
    <string name="blabla">blabla</string>
    <string name="som_selecionado">Som selecionado</string>
    <string name="selecione_som">Selecionar arquivo de som &#8230;</string>
    <string name="title_activity_perfil_manage">PerfilManageActivity</string>
    <string name="imagens_text">Imagens</string>
    <string name="categorias_text">Categorias</string>
    <string name="imagem_e_som_text">IMAGEM E SOM</string>
    <string name="descricao_text">DESCRIÇÃO:</string>
    <string name="nome_text">Nome</string>
    <string name="selecione_uma_imagem_btn">Selecione uma Imagem</string>
    <string name="definir_imagens">Definir Imagens</string>
    <string name="selecione_arquivo_imagem">Selecione arquivo de Imagem</string>
    <string name="dados_imagem">DADOS DA IMAGEM</string>
    <string name="descricao">Descrição</string>
    <string name="categoria">Categoria</string>
    <string name="identificacao">IDENTIFICAÇÃO</string>
    <string name="autor">Autor</string>
    <string name="categorias_uppercase">CATEGORIAS</string>
    <string name="add_categoria">Adicionar Categoria</string>
    <string name="opcoes">Opções</string>
    <string name="tocar_som_ao_selecionar_imagem">Tocar som ao selecionar imagem</string>
	<string name="voltar_automaticamente_para_tela_categorias">Voltar automaticamente para a tela de categorias</string>
    <string name="intervalo_tempo_tocar_frase">Intervalo de tempo ao tocar som da frase (ms)</string>
    <string name="intervalo_tempo_varredura">Intervalo de tempo da varredura (ms)</string>
    <string name="cor_borda">Cor da Borda do modo Varredura</string>
    <string name="dialog_title_opcoes_borda">Escolha a cor da borda</string>
    <string name="borda_vermelha">Borda Vermelha</string>
    <string name="borda_preta">Borda Preta</string>
    <string name="borda_vermelha_value">0</string>
    <string name="borda_preta_value">1</string>
    <string name="tamanho_imagem">Tamanho da imagem</string>
    <string name="dialog_title_opcoes_tamanho_imagem">Escolha o tamanho da imagem</string>
    <string name="tamanho_imagem_pequeno">Pequeno</string>
    <string name="tamanho_imagem_medio">Médio</string>
    <string name="tamanho_imagem_grande">Grande</string>
    <string name="tamanho_imagem_extra_grande">Extra Grande</string>
    <string name="tamanho_imagem_pequeno_value">85</string>
    <string name="tamanho_imagem_medio_value">96</string>
    <string name="tamanho_imagem_grande_value">120</string>
    <string name="tamanho_imagem_extra_grande_value">240</string>
    <string name="add">Adicionar</string>
    <string name="tem_certeza">Tem certeza?</string>
    <string name="confirmar_exclusao">Confirmar Exclusão</string>
    <string name="add_img_recem_criada">Deseja adicionar imagem recém criada?</string>
    <string name="add_imagem">Adicionar Imagem</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="img_incluida_com_sucesso">Imagem incluida com sucesso!</string>
    <string name="gerenciar">Gerenciar</string>
    <string name="pagina">Página</string>
    <string name="imagem">Imagem</string>
    <string name="deletar">Deletar</string>
    <string name="definir_categorias">Definir Categorias</string>
    <string name="perfil_incluido_sucesso">Perfil incluído com sucesso!</string>
    <string name="perfil_editado_sucesso">Perfil editado com sucesso!</string>
    <string name="perfil">Perfil</string>
    <string name="erro_nao_e_possivel_deletar_perfil_default">Perfil padrão, não é possível deletá-lo!</string>
    <string name="erro_nao_existem_categorias_no_perfil">Não existem imagens no perfil atual!</string>
    
    <string name="titulo_sobre_dialog">Sobre</string>
    <string name="desenvolvido_por">Desenvolvido por:</string>
    <string name="leonardo">Leonardo Ono Fernandes</string>
    <string name="duduchi">Marcelo Duduchi</string>
    <string name="pibic_cnpq">Projeto PIBIC do CNPq</string>
    <string name="fatec_ceeteps">FATEC-SP do CEETEPS</string>
    <string name="versao_demo">Versão de demonstração</string>
    
    <string name="fechar">Fechar</string>
    
    <string name="funcao_desabilitada">Função Desabilitada!</string>
    

</resources>