<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_selecionar_perfil"
        android:showAsAction="ifRoom"
        android:title="@string/action_selecionar_perfil" />
    <item 
        android:id="@+id/action_gerenciar_imagens"
        android:showAsAction="ifRoom|withText"
        android:title="@string/imagens_text"
        android:icon="@android:drawable/ic_menu_manage"/>
    <item 
        android:id="@+id/action_gerenciar_categorias"
        android:showAsAction="ifRoom|withText"
        android:title="@string/categorias_text"
        android:icon="@android:drawable/ic_menu_manage"/>
    <item
        android:id="@+id/action_opcoes"
        android:showAsAction="never"
        android:title="@string/action_opcoes"/>
    
</menu>
