<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:contentDescription="@string/blabla"
        android:src="@raw/ic_launcher" />
    
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/desenvolvido_por"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginTop="10dp"
	/>
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/leonardo"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_gravity="center_horizontal"
	/>
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/duduchi"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_gravity="center_horizontal"
	/>
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/pibic_cnpq"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_gravity="center_horizontal"
	/>
	
	<TextView 
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/fatec_ceeteps"
	    android:textAppearance="?android:attr/textAppearanceMedium"
	    android:layout_gravity="center_horizontal"
	    android:layout_marginBottom="10dp"
	/>	
    
</LinearLayout>
