<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imagem_e_som_text"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0099CC" />
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0.1dp"
	    android:background="#0099CC" />
	
	
	<ImageButton 
	    android:id="@+id/btnUploadImg"
	    android:layout_width="96dp"
	    android:layout_height="96dp"
	    android:layout_gravity="center_horizontal"
	    android:contentDescription="@string/selecione_arquivo_imagem"/>	
        
	
	<Button
	    android:id="@+id/btnUploadSom"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/selecione_som" />
	
	<RelativeLayout 
	    android:id="@+id/laySom"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:padding="6dip"
	    android:visibility="gone">

	    <ImageButton
	        android:id="@+id/btnTocar"
	        android:layout_width="wrap_content"
			android:layout_height="58dp"
	        android:layout_alignParentRight="true"
			android:layout_centerInParent="true"	        
	        android:src="@android:drawable/ic_media_play"
	        android:contentDescription="@string/blabla" />
	    	    	    
		<TextView
		    android:id="@+id/textView3"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_alignParentLeft="true"
		    android:text="@string/som_selecionado"
		    android:textAppearance="?android:attr/textAppearanceMedium"/>
		<TextView
		    android:id="@+id/lblSomSel"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/blabla"
		    android:textAppearance="?android:attr/textAppearanceSmall"
		    android:layout_alignParentLeft="true"
		    android:layout_alignBottom="@id/btnTocar"/>
		
	</RelativeLayout>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dados_imagem"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0099CC" />
	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0.1dp"
	    android:background="#0099CC" />        
    
	<EditText
	    android:id="@+id/txtDesc"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:hint="@string/descricao"
	    android:ems="10"
	    android:inputType="text" >

	</EditText>
	
</LinearLayout>