<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/identificacao"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0099CC" />

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0.1dp"
	    android:background="#0099CC" />

    <EditText
        android:id="@+id/txtNomePerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome_text" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/txtAutorPerfil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/autor" />
    
     <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categorias_uppercase"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#0099CC" />

	<View
	    android:layout_width="fill_parent"
	    android:layout_height="0.1dp"
	    android:background="#0099CC" />

	<Button 
	    android:id="@+id/btnDefinirCategorias"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/definir_categorias" />
</LinearLayout>
